--- a/UrbanDevelopmentProj/UrbanDevelopmentProj.csproj
+++ b/UrbanDevelopmentProj/UrbanDevelopmentProj.csproj
@@ -6,8 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Sendgrid" Version="9.12.0" />
+    <PackageReference Include="SendGrid.Net40" Version="5.1.0" />
+    <PackageReference Include="SendGrid.SmtpApi" Version="1.3.3" />
 	
   </ItemGroup>
 
