--- a/UrbanDevelopmentProj/UrbanDevelopmentProj.csproj
+++ b/UrbanDevelopmentProj/UrbanDevelopmentProj.csproj
@@ -6,12 +6,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" ><NoWarn>NU1701</NoWarn></PackageReference>
-    <PackageReference Include="Microsoft.AspNetCore.App" ><NoWarn>NU1701</NoWarn></PackageReference>
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" ><NoWarn>NU1701</NoWarn></PackageReference>
-    <PackageReference Include="Sendgrid" Version="9.12.0" ><NoWarn>NU1701</NoWarn></PackageReference>
-	<PackageReference Include="SendGrid.Net40" Version="5.1.0" ><NoWarn>NU1701</NoWarn></PackageReference>
-	<PackageReference Include="SendGrid.SmtpApi" Version="1.3.3" ><NoWarn>NU1701</NoWarn></PackageReference>	
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7"><NoWarn>NU1701</NoWarn></PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.App"><NoWarn>NU1701</NoWarn></PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All"><NoWarn>NU1701</NoWarn></PackageReference>
+    <PackageReference Include="Sendgrid" Version="9.12.0"><NoWarn>NU1701</NoWarn></PackageReference>
+	<PackageReference Include="SendGrid.Net40" Version="5.1.0"><NoWarn>NU1701</NoWarn></PackageReference>
+	<PackageReference Include="SendGrid.SmtpApi" Version="1.3.3"><NoWarn>NU1701</NoWarn></PackageReference>	
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Images\" />
   </ItemGroup>
 
  
